Bugfix to ensure button icons are rendered in correct size on mobile | close #2

--- a/css/global.css
+++ b/css/global.css
@@ -75,6 +75,7 @@
     --font-size-gigantic: 76px;
 
     --font-size-mobile-normal: 39px;
+    --font-size-mobile-large: 65px;
     --font-size-mobile-extra-large: 78px;
   
     --font-uberall: Uberall Regular;
