--- a/css/index.css
+++ b/css/index.css
@@ -284,7 +284,7 @@ body{
     gap: 50px;
   }
   #about-quicklinks > a {
-    font-size: 70px;
+    font-size: var(--font-size-mobile-large) !important;
     padding: 30px !important;
   }
   #about-image{
